// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Criterion Feedback snapshot is graded 1`] = `
<Control
  as="input"
  className="criterion-feedback feedback-input"
  disabled={true}
  floatingLabel="Comments"
  onChange={[Function]}
  value="some value"
/>
`;

exports[`Criterion Feedback snapshot is grading 1`] = `
<Control
  as="input"
  className="criterion-feedback feedback-input"
  disabled={false}
  floatingLabel="Add comments"
  onChange={[Function]}
  value="some value"
/>
`;
